--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,15 +12,12 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <a href="/">Tech Blog</a>
-        <button>New Post</button>
-      </h1>
+      <h1>Tech Blog</h1>
       <nav>
-        <!-- Conditionally render login or logout links -->
+        <a href="/">Home</a>
+        <a href="/Dashboard">Dashboard</a>
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <button id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
@@ -34,7 +31,6 @@
     </footer>
   </div>
 
-  <!-- Render script for logged in users only -->
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
