--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,35 +2,18 @@
   <div class="">
     <h3>Create new Post</h3>
 
-    <form class="form new-project-form">
+    <form class="form new-post-form">
       <div class="form-group">
-        <input class="form-input" type="text" id="project-name" name="project-name" placeholder="Title" />
+        <input class="form-input" type="text" id="post-title" placeholder="Title" />
       </div>
       <div class="form-group">
-        <textarea class="form-input" id="project-desc" name="project-desc" placeholder="Content"></textarea>
+        <textarea class="form-input" id="post-content" placeholder="Content"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
       </div>
     </form>
   </div>
-
-  {{#if post.length}}
-  <div class="col-md-6 project-list">
-    <h3>Current posts:</h3>
-
-    {{#each post as |post|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/project/{{post.id}}">{{post.name}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
-      </div>
-    </div>
-    {{/each}}
-  </div>
-  {{/if}}
 </div>
 
 <script src="./js/dashboard.js"></script>
