--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,13 +2,13 @@
 <div class="post">
   <div class="">
     <h2>
-      <a href="/post/{{post.id}}">{{post.name}}</a>
+      <a href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
     <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
   </div>
   <div class="">
     <p>
-      {{post.description}}
+      {{post.content}}
     </p>
   </div>
 </div>
