home and login css

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,26 +10,21 @@
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>Tech Blog</h1>
-      <nav>
-        <a href="/">Home</a>
-        <a href="/Dashboard">Dashboard</a>
-        {{#if logged_in}}
-        <button id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
-    </header>
-    <main class="">
-      {{{ body }}}
-    </main>
-    <footer>
-      
-    </footer>
-  </div>
+  <header>
+    <h1><a href="/">Tech Blog</a></h1>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/Dashboard">Dashboard</a>
+      {{#if logged_in}}
+      <a href="" id="logout">Logout</a>
+      {{else}}
+      <a href="/login">Login</a>
+      {{/if}}
+    </nav>
+  </header>
+  <main class="">
+    {{{ body }}}
+  </main>
 
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
