--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,133 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+:root {
+    --mainColor: hwb(32 14% 15%);
+    --secondaryColor: hwb(0 11% 89%);
+    --textColor: #fff;
+}
+
 body {
     background-color: hwb(0 16% 84%);
-    color: #ffffff;
+}
+
+a {
+    text-decoration: none;
+    color: var(--textColor);
 }
 
 header {
-    background-color: hwb(0 3% 97%)
+    background-color: hwb(0 3% 97%);
+    height: 110px;
 }
 
 header h1 {
     font-size: 3rem;
-    padding: 20px;
+    position: relative;
+    display: inline;
+    top: 35px;
+    left: 40px;
 }
 
-.post {
-    background-color: hwb(165 5% 92%);
+header nav {
+    display: flex;
+    justify-content: end;
+}
+
+header nav a {
+    padding-right: 40px;
+    font-size: 1.4rem;
+    transition: 50ms;
+}
+
+header nav a:hover {
+    color: var(--mainColor);
+    scale: 1.1;
+}
+
+.container {
+    background-color: var(--secondaryColor);
+    padding: 20px;
+    margin: 20px 20%;
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* homepage posts */
+.post a {
+    color: hwb(180 69% 0%);
+}
+
+.post a:hover {
+    color: hwb(180 27% 45%);
+}
+
+.post-title {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.post-content {
+    background-color: #2e2e2e;
+    color: #fff;
+    padding: 20px;
+    margin: 20px 0;
+}
+
+#post-creator {
+    color: #535353;
+    text-align: end;
+}
+
+h3, h2 {
+    text-align: center;
+    color: var(--textColor);
+    font-size: 2rem;
+}
+
+/* login signup */
+.form {
+    padding: 20px 0;
+}
+
+#email-login,
+#password-login,
+#name-signup,
+#email-signup,
+#password-signup {
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    outline: none;
+    border: 0;
+    margin: 10px 0;
+}
+
+/* login/signup button */
+.login-submit {
+    color: var(--textColor);
+    padding: 10px;
+    border: 0;
+    border-radius: 5px;
+    margin: 10px 0;
+    background-color: #535353;
+}
+
+.login-submit:hover {
+    background-color: var(--mainColor);
+    cursor: pointer;
+}
+
+.loginsignuplinker {
+    color: #fff;
+}
+
+.loginsignuplinker:hover {
+    color: #c9c9c9;
 }
