--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,19 +1,31 @@
-<div class="">
-  <div class="">
-    <h3>Create new Post</h3>
+<div class="container">
+  <h3>Create new Post</h3>
 
-    <form class="form new-post-form">
-      <div class="form-group">
-        <input class="form-input" type="text" id="post-title" placeholder="Title" />
-      </div>
-      <div class="form-group">
-        <textarea class="form-input" id="post-content" placeholder="Content"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
-      </div>
-    </form>
-  </div>
+  <form class="form new-post-form">
+    <div class="form-group">
+      <input class="form-input" type="text" id="post-title" placeholder="Title" />
+    </div>
+    <div class="form-group">
+      <textarea class="form-input" id="post-content" placeholder="Content"></textarea>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">Create</button>
+    </div>
+  </form>
 </div>
+
+<h3>Previous Posts</h3>
+
+{{#each posts as |post|}}
+  <div class="row mb-2">
+    <div class="col-md-8">
+      <h4><a href="/post/{{post.id}}">{{post.title}}</a></h4>
+    </div>
+    <div class="col-md-4">
+      <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+    </div>
+  </div>
+{{/each}}
+
 
 <script src="./js/dashboard.js"></script>
