--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,16 @@
 {{#each posts as |post| }}
-<div class="post">
-  <div class="">
-    <h2>
-      <a href="/post/{{post.id}}">{{post.title}}</a>
-    </h2>
-    <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
-  </div>
-  <div class="">
+<div class="container post">
+
+  <h2 class="post-title">
+    <a href="/post/{{post.id}}">{{post.title}}</a>
+  </h2>
+
+  <div class="post-content">
     <p>
       {{post.content}}
     </p>
   </div>
+
+  <p id="post-creator">Created by {{post.user.name}} on {{format_date post.date_created}}</p>
 </div>
 {{/each}}
