--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,18 @@
-<div class="row">
-  <div class="col-md-6">
+<div class="flex container">
     <h2>Login</h2>
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <input class="form-input" type="text" id="email-login" placeholder="Email" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <input class="form-input" type="password" id="password-login" placeholder="Password" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="login-submit" type="submit">login</button>
       </div>
     </form>
-  </div>
-  <button><a href="/signup">Don't have a account?</a></button>
+  <a class="loginsignuplinker" href="/signup">Don't have an account?</a>
 </div>
 
 <script src="./js/login.js"></script>
