--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,25 +1,22 @@
-<div class="row">
+<div class="flex container">
     <div class="col-md-6">
         <h2>Signup</h2>
 
         <form class="form signup-form">
             <div class="form-group">
-            <label for="name-signup">name:</label>
-            <input class="form-input" type="text" id="name-signup" />
+                <input class="form-input" type="text" id="name-signup" placeholder="Name" />
             </div>
             <div class="form-group">
-            <label for="email-signup">email:</label>
-            <input class="form-input" type="text" id="email-signup" />
+                <input class="form-input" type="text" id="email-signup" placeholder="Email" />
             </div>
             <div class="form-group">
-            <label for="password-signup">password:</label>
-            <input class="form-input" type="password" id="password-signup" />
+                <input class="form-input" type="password" id="password-signup" placeholder="Password" />
             </div>
             <div class="form-group">
-            <button class="btn btn-primary" type="submit">Sign Up</button>
+                <button class="login-submit" type="submit">Sign Up</button>
             </div>
         </form>
     </div>
-    <button><a href="/login">Already have a account?</a></button>
+    <a class="loginsignuplinker" href="/login">Already have an account?</a>
 </div>
 <script src="./js/signup.js"></script>
