--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,6 +1,6 @@
-<div class="text-center">
-  <h2>{{title}}</h2>
-  <p>{{content}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <button>Comment</button>
+<div class="container post">
+  <h2 class="post-title">{{title}}</h2>
+  <p class="post-content">{{content}}</p>
+  <p class="post-creator">Created by {{user.name}} on {{format_date date_created}}</p>
+  <button class="submit-button">Comment</button>
 </div>
