--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
         <input class="form-input" type="password" id="password-login" placeholder="Password" />
       </div>
       <div class="form-group">
-        <button class="login-submit" type="submit">login</button>
+        <button class="submit-button" type="submit">login</button>
       </div>
     </form>
   <a class="loginsignuplinker" href="/signup">Don't have an account?</a>
