--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <div class="flex container">
-    <div class="col-md-6">
+    <div>
         <h2>Signup</h2>
 
         <form class="form signup-form">
@@ -13,7 +13,7 @@
                 <input class="form-input" type="password" id="password-signup" placeholder="Password" />
             </div>
             <div class="form-group">
-                <button class="login-submit" type="submit">Sign Up</button>
+                <button class="submit-button" type="submit">Sign Up</button>
             </div>
         </form>
     </div>
