--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,12 +1,6 @@
-<div class="container post">
-  <h2 class="post-title">{{title}}</h2>
-  <p class="post-content">{{content}}</p>
-  <p class="post-creator">Created by {{user.name}} on {{format_date date_created}}</p>
   <button class="submit-button new-comment">Comment</button>
-</div>
 
-{{!-- display comments here later --}}
-
+{{!-- hidden comment menu --}}
 <div class="flex container new-comment-container" style="display: none;">
   <h3>New Comment not currently working</h3>
 
@@ -19,5 +13,20 @@
     </div>
   </form>
 </div>
+
+{{!-- main post --}}
+<div class="container post">
+  <h2 class="post-title">{{title}}</h2>
+  <p class="post-content">{{content}}</p>
+  <p class="post-creator">Created by {{user.name}} on {{format_date date_created}}</p>
+</div>
+
+{{!-- Display comments here --}}
+{{#each comments as |comment| }}
+  <div class="container post">
+    <p class="post-content">{{comment.content}}</p>
+    <p class="post-creator">Created by {{comment.User.name}} on {{format_date date_created}}</p>
+  </div>
+{{/each}}
 
 <script src="../js/comment.js"></script>
